--- a/adilzhan_shirbayev_adil_kenzhiyev_assignment1.ipynb
+++ b/adilzhan_shirbayev_adil_kenzhiyev_assignment1.ipynb
@@ -5,9 +5,9 @@
    "cell_type": "markdown",
    "source": [
     "Assignment 1\n",
-    "Name: Shirbayev Adilzhan\n",
+    "Name: Shirbayev Adilzhan, Adil Kenzhiyev\n",
     "\n",
-    "File: adilzhan_Assignment1.ipynb\n",
+    "File: adilzhan_shirbayev_adil_kenzhiyev_assignment1.ipynb\n",
     "\n",
     "Table of Contents\n",
     "Import Necessary Libraries\n",
@@ -863,8 +863,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-07T16:39:33.056928Z",
-     "start_time": "2024-10-07T16:39:30.506491Z"
+     "end_time": "2024-10-07T22:38:55.952736Z",
+     "start_time": "2024-10-07T22:38:55.624361Z"
     }
    },
    "cell_type": "code",
@@ -872,13 +872,26 @@
     "import h5py\n",
     "model_relu.save('model_relu.keras')\n",
     "model_sigmoid.save('model_sigmoid.keras')\n",
+    "model_small_random('model_small_random.keras')\n",
     "model_xavier.save('model_xavier.keras')\n",
     "model_dropout.save('model_dropout.keras')\n",
-    "model_batchnorm.save('model_batchnorm.keras')"
+    "model_batchnorm.save('model_batchnorm.keras')\n"
    ],
    "id": "e4e1d94d91802a19",
-   "outputs": [],
-   "execution_count": 20
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'model_relu' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[1], line 2\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mh5py\u001B[39;00m\n\u001B[0;32m----> 2\u001B[0m \u001B[43mmodel_relu\u001B[49m\u001B[38;5;241m.\u001B[39msave(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mmodel_relu.keras\u001B[39m\u001B[38;5;124m'\u001B[39m)\n\u001B[1;32m      3\u001B[0m model_sigmoid\u001B[38;5;241m.\u001B[39msave(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mmodel_sigmoid.keras\u001B[39m\u001B[38;5;124m'\u001B[39m)\n\u001B[1;32m      4\u001B[0m model_small_random(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mmodel_small_random.keras\u001B[39m\u001B[38;5;124m'\u001B[39m)\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'model_relu' is not defined"
+     ]
+    }
+   ],
+   "execution_count": 1
   },
   {
    "metadata": {},
@@ -1139,34 +1152,6 @@
     }
    ],
    "execution_count": 27
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": [
-    "8. Comparison and Discussion\n",
-    "After training and evaluating all the models, we can observe the following:\n",
-    "\n",
-    "Activation Functions:\n",
-    "\n",
-    "ReLU Activation Model generally performed better than the Sigmoid Activation Model, achieving higher accuracy and faster convergence.\n",
-    "Weight Initializations:\n",
-    "\n",
-    "The Xavier Initialization Model converged faster and achieved higher accuracy compared to the Small Random Initialization Model.\n",
-    "Regularization Methods:\n",
-    "\n",
-    "The Batch Normalization Model not only converged faster but also achieved higher accuracy compared to the Dropout Regularization Model.\n",
-    "Batch Normalization helps in stabilizing the learning process and accelerates training.\n",
-    "Best Performing Model:\n",
-    "\n",
-    "The combination of ReLU activation, Xavier initialization, and Batch Normalization yielded the best performance on the test data.\n",
-    "Conclusion:\n",
-    "\n",
-    "Using the ReLU activation function and Xavier initialization provides better performance due to improved gradient flow and weight scaling.\n",
-    "Batch Normalization is effective in regularizing the model and improving convergence speed.\n",
-    "Proper data preprocessing and model architecture design significantly impact the model's performance."
-   ],
-   "id": "af3b6c806fddd60"
   }
  ],
  "metadata": {
